fix icon alignment

--- a/Lab0/app.css
+++ b/Lab0/app.css
@@ -5,6 +5,7 @@
 }
 
 .students-table {
+    min-width: 100%;
     width: 100%;
     border-collapse: collapse;
 }
@@ -21,4 +22,8 @@
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
+}
+
+.navbar {
+    box-shadow: -3px -11px 18px 14px rgba(0, 0, 0, 0.5)
 }
